--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>{{ post.title }}</title>
+    <title>About</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,27 +27,10 @@
 </nav>
 <div class="container">
 
-    <div><a href="{% url 'post_detail' post.id %}"><h1>{{ post.title }}</h1> </a></div>
-    <div><h4>{{ post.get_date }}</h4></div>
-<div><img src="{{ post.image.url }}" class="img-fluid rounded mx-auto d-block" style="max-height:300px"/></div>
-    <div><p>{{ post.body }}</p></div>
+    <div><h1 class="text-center">About</h1></div>
+<div><img src="{{ about.image.url }}" class="img-fluid rounded mx-auto d-block" style="max-height:300px"/></div>
+    <div>{{ about.body }}</div>
     <br>
-    <div id="disqus_thread"></div>
-<script>
-
-var disqus_config = function () {
-this.page.identifier = 'post-{{post.id}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://kropsblog.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
