--- a/templates/posts/home.html
+++ b/templates/posts/home.html
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item active"><a class="nav-link" href="{% url 'about_page' %}">About</a></li>
                 <li class="nav-item active"><a class="nav-link" href="https://twitter.com/Widoon">Twitter</a></li>
             </ul>
         </div>
